codex-rs/tui/src/app/tests/snapshots/codex_tui__app__tests__backend_banner_fallback_tests__backend_banner_after_fallback.snap
---
source: tui/src/app/tests/backend_banner_fallback_tests.rs
expression: normalize_snapshot_paths(rendered)
---
  Selected model usage exhausted
  Add credits to use this model again.
› 1. View usage

  Press a number to choose · esc to dismiss · type to continue
╭──────────────────────────────────────────────────────────────────────╮
┃ ›                                                                    │
╰──────────────────────────────────────────────────────────────────────╯
  GPT 5.6 Terra · Medium · /tmp/project
