codex-rs/tui/src/app/tests/snapshots/codex_tui__app__tests__backend_banner_fallback_tests__backend_banner_fallback_unavailable.snap
---
source: tui/src/app/tests/backend_banner_fallback_tests.rs
expression: normalize_snapshot_paths(rendered)
---
╭──────────────────────────────────────────────────────────────────────╮
┃ ›                                                                    │
╰──────────────────────────────────────────────────────────────────────╯
  GPT 5.5 · Default · /tmp/project
