codex-rs/tui/src/app/tests/snapshots/codex_tui__app__tests__backend_banner_fallback_tests__luna_reserve_settings_unavailable.snap
---
source: tui/src/app/tests/backend_banner_fallback_tests.rs
expression: normalize_snapshot_paths(rendered)
---
  Usage limit reached
  Your included usage is exhausted. Choose an option below to continue.

› 1. Add credits

  ↑/↓ choose · enter confirm · esc back
